<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:paddingTop="20dp"
                android:src="@drawable/horseicon" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="20dp">

                <Button
                    android:id="@+id/facil"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:background="@drawable/bk_button"
                    android:fontFamily="monospace"
                    android:text="@string/txtFacil"
                    android:textColor="@color/botonLetras"
                    android:textSize="@dimen/textButtonSize" />

                <Button
                    android:id="@+id/medio"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/bk_button"
                    android:fontFamily="monospace"
                    android:text="@string/txtMedio"
                    android:textColor="@color/botonLetras"
                    android:textSize="@dimen/textButtonSize" />

                <Button
                    android:id="@+id/dificil"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/bk_button"
                    android:fontFamily="monospace"
                    android:text="@string/txtDificil"
                    android:textColor="@color/botonLetras"
                    android:textSize="@dimen/textButtonSize" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editTFila"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="5"
                        android:hint="@string/txtFilas" />

                    <EditText
                        android:id="@+id/editTCol"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="5"
                        android:hint="@string/txtColumnas" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editTPosX"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="5"
                        android:hint="@string/txtX" />

                    <EditText
                        android:id="@+id/editTPosY"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="5"
                        android:hint="@string/txtY" />


                </LinearLayout>


                <Button
                    android:id="@+id/btnJugar"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bk_button"
                    android:fontFamily="monospace"
                    android:text="@string/txtJugar"
                    android:textColor="@color/botonLetras"
                    android:textSize="@dimen/textButtonSize" />


            </LinearLayout>


        </LinearLayout>


    </ScrollView>


</LinearLayout>
